# nix-flakes

./: README.md  flake.nix  pyproject.toml  setup.cfg
PythonEDAApplicationNixFlakes/: application.py
PythonEDANixFlakesApplication/: application.py
